--- a/modules/nginx/nginx.conf
+++ b/modules/nginx/nginx.conf
@@ -31,7 +31,7 @@ http {
 	# SSL Settings
 	##
 
-	ssl_protocols TLSv1.2 TLSv1.3; # Dropping SSLv3, ref: POODLE
+	ssl_protocols TLSv1.3; # Dropping SSLv3, ref: POODLE
 	ssl_prefer_server_ciphers on;
 
 	##
