Added priveasywsMaintenance role with updated modules

--- a/modules/supervisor/priveasyws0-celery.conf
+++ b/modules/supervisor/priveasyws0-celery.conf
@@ -1,15 +1,15 @@
-; ================================
-;  celery beat supervisor
-; ================================
+; ==================================
+;  celery worker supervisor
+; ==================================
 
 ; Name of supervisord program
-[program:celerybeat]
+[program:mainsitecelery]
 
 ; Full path to celery program (in virtualenv)
-command=/home/ubuntu/{{ whichWebserverEnv }}/bin/celery -A mainSite beat --loglevel=INFO
+command=/home/ubuntu/priveasyEnv/bin/celery -A mainSite worker --loglevel=INFO -O fair
 
 ; Directory of Django project
-directory=/home/ubuntu/{{ whichWebserverProject }}/
+directory=/home/ubuntu/priveasyBackend/Priveasy/
 
 user=root
 
@@ -17,10 +17,10 @@ user=root
 numprocs=1
 
 ; Put process stdout in this file
-stdout_logfile=/var/log/celery/beat.log
+stdout_logfile=/var/log/celery/worker.log
 
 ; Put process stderr in this file
-stderr_logfile=/var/log/celery/beat.err
+stderr_logfile=/var/log/celery/worker.err
 
 ; Start program automatically when supervisord is started
 autostart=true
@@ -33,7 +33,7 @@ startsecs=30
 ; Need to wait for currently executing tasks to finish at shutdown.
 ; Increase this if you have very long running tasks.
 ; Uncomment this during production:
-; stopwaitsecs = 1200
+; stopwaitsecs = 300
 stopwaitsecs = 60
 
 ; When resorting to send SIGKILL to the program to terminate it
@@ -43,4 +43,4 @@ killasgroup=true
 
 ; if your broker is supervised, set its priority higher
 ; so it starts first
-priority=996
+priority=997
