--- a/modules/supervisor/priveasyws0-tor.conf
+++ b/modules/supervisor/priveasyws0-tor.conf
@@ -5,10 +5,10 @@
 ; Name of supervisord program
 [program:tor]
 
-; Full path to celery program (in virtualenv)
+; Full path to tor executable
 command=/usr/sbin/tor
 
-; Directory of Django project
+; Directory for Tor to run in
 directory=/home/ubuntu
 
 user=ubuntu
