--- a/modules/supervisor/priveasyws0-uwsgi.conf
+++ b/modules/supervisor/priveasyws0-uwsgi.conf
@@ -1,6 +1,6 @@
 [program:uwsgiSupervised]
-command=/home/ubuntu/{{ whichWebserverEnv }}/bin/uwsgi --ini /home/ubuntu/{{ whichWebserverProject }}/config/uwsgi.ini
-directory=/home/ubuntu/{{ whichWebserverProject }}/
+command=/home/ubuntu/priveasyEnv/bin/uwsgi --ini /home/ubuntu/priveasyBackend/config/uwsgi.ini
+directory=/home/ubuntu/priveasyBackend/Priveasy/
 
 user=root
 numprocs=1
