Added email support to priveasyws

--- a/modules/opendkim/opendkim.conf
+++ b/modules/opendkim/opendkim.conf
@@ -15,14 +15,9 @@ UMask			007
 #Selector		2007
 
 # Commonly-used options; the commented-out versions show the defaults.
-Canonicalization	relaxed/simple
-Mode			sv
-SubDomains		no
-AutoRestart		yes
-AutoRestartRate		10/1M
-Background		yes
-DNSTimeout		5
-SignatureAlgorithm	rsa-sha256
+#Canonicalization	simple
+#Mode			sv
+#SubDomains		no
 
 # Socket smtp://localhost
 #
