Modified celery user

--- a/modules/supervisor/priveasyws0-celeryBeat.conf
+++ b/modules/supervisor/priveasyws0-celeryBeat.conf
@@ -11,7 +11,7 @@ command=/home/ubuntu/priveasyEnv/bin/celery -A mainSite beat --loglevel=INFO
 ; Directory of Django project
 directory=/home/ubuntu/priveasyBackend/Priveasy/
 
-user=root
+user=ubuntu
 
 ; Number of program instances
 numprocs=1
